--- a/DataDrivenFramework/test-output/old/Default suite/methods.html
+++ b/DataDrivenFramework/test-output/old/Default suite/methods.html
@@ -1,38 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="61a3d3">  <td>20/09/02 00:02:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startup()[pri:0, instance:automationScripts.Script@7a765367]">&gt;&gt;startup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="61a3d3">  <td>20/09/02 00:02:53</td>   <td>653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@7a765367]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/09/02 00:03:01</td>   <td>8007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataExcel(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@7a765367]">dataExcel</td> 
-  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="61a3d3">  <td>20/09/02 00:03:06</td>   <td>13862</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@7a765367]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="61a3d3">  <td>20/09/02 00:03:12</td>   <td>18992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@7a765367]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/09/02 00:03:12</td>   <td>19907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataExcel(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@7a765367]">dataExcel</td> 
-  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="61a3d3">  <td>20/09/02 00:03:18</td>   <td>25924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@7a765367]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="61a3d3">  <td>20/09/02 00:03:24</td>   <td>31579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@7a765367]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/09/02 00:03:25</td>   <td>32494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataExcel(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@7a765367]">dataExcel</td> 
-  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="61a3d3">  <td>20/09/02 00:03:31</td>   <td>38843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@7a765367]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="61a3d3">  <td>20/09/02 00:03:37</td>   <td>44494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@7a765367]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/09/02 00:03:38</td>   <td>45409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataExcel(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@7a765367]">dataExcel</td> 
-  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="61a3d3">  <td>20/09/02 00:03:44</td>   <td>51259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@7a765367]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="61a3d3">  <td>20/09/02 00:03:49</td>   <td>56908</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@7a765367]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/09/02 00:03:50</td>   <td>57803</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataExcel(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@7a765367]">dataExcel</td> 
-  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="61a3d3">  <td>20/09/02 00:03:56</td>   <td>63715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@7a765367]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="61a3d3">  <td>20/09/02 00:04:02</td>   <td>69342</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterAllTests()[pri:0, instance:automationScripts.Script@7a765367]">&lt;&lt;afterAllTests</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="a583f8">  <td>20/09/23 20:13:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;startup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
+<tr bgcolor="a583f8">  <td>20/09/23 20:13:47</td>   <td>459</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterAllTests()[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;afterAllTests</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
 </table>
