--- a/DataDrivenFramework/test-output/old/Default suite/methods-alphabetical.html
+++ b/DataDrivenFramework/test-output/old/Default suite/methods-alphabetical.html
@@ -1,38 +1,38 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a583f8">  <td>20/09/26 23:58:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterAllTests()[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;afterAllTests</td> 
+<tr bgcolor="a583f8">  <td>20/10/03 10:33:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterAllTests()[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;afterAllTests</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="9b7070">  <td>20/09/26 23:57:27</td>   <td>-69624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataExcel(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@17d677df]">dataExcel</td> 
+<tr bgcolor="9b7070">  <td>20/10/03 10:32:45</td>   <td>-65276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataBase(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@17d677df]">dataBase</td> 
   <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="9b7070">  <td>20/09/26 23:57:40</td>   <td>-56347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataExcel(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@17d677df]">dataExcel</td> 
+<tr bgcolor="9b7070">  <td>20/10/03 10:32:59</td>   <td>-51386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataBase(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@17d677df]">dataBase</td> 
   <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="9b7070">  <td>20/09/26 23:57:54</td>   <td>-43020</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataExcel(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@17d677df]">dataExcel</td> 
+<tr bgcolor="9b7070">  <td>20/10/03 10:33:10</td>   <td>-40351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataBase(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@17d677df]">dataBase</td> 
   <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="9b7070">  <td>20/09/26 23:58:10</td>   <td>-27134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataExcel(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@17d677df]">dataExcel</td> 
+<tr bgcolor="9b7070">  <td>20/10/03 10:33:23</td>   <td>-26633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataBase(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@17d677df]">dataBase</td> 
   <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="9b7070">  <td>20/09/26 23:58:22</td>   <td>-14197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataExcel(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@17d677df]">dataExcel</td> 
+<tr bgcolor="9b7070">  <td>20/10/03 10:33:37</td>   <td>-13319</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataBase(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@17d677df]">dataBase</td> 
   <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/09/26 23:57:26</td>   <td>-70303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;setup</td> 
+<tr bgcolor="a583f8">  <td>20/10/03 10:32:43</td>   <td>-67530</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/09/26 23:57:40</td>   <td>-56629</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;setup</td> 
+<tr bgcolor="a583f8">  <td>20/10/03 10:32:58</td>   <td>-52376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/09/26 23:57:53</td>   <td>-43293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;setup</td> 
+<tr bgcolor="a583f8">  <td>20/10/03 10:33:09</td>   <td>-41283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/09/26 23:58:09</td>   <td>-27409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;setup</td> 
+<tr bgcolor="a583f8">  <td>20/10/03 10:33:23</td>   <td>-27549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/09/26 23:58:22</td>   <td>-14472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;setup</td> 
+<tr bgcolor="a583f8">  <td>20/10/03 10:33:36</td>   <td>-14223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/09/26 23:57:26</td>   <td>-70748</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;startup</td> 
+<tr bgcolor="a583f8">  <td>20/10/03 10:32:42</td>   <td>-68434</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;startup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/09/26 23:57:35</td>   <td>-61750</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;tearDown</td> 
+<tr bgcolor="a583f8">  <td>20/10/03 10:32:52</td>   <td>-58057</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/09/26 23:57:48</td>   <td>-49086</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;tearDown</td> 
+<tr bgcolor="a583f8">  <td>20/10/03 10:33:04</td>   <td>-46409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/09/26 23:58:04</td>   <td>-33175</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;tearDown</td> 
+<tr bgcolor="a583f8">  <td>20/10/03 10:33:17</td>   <td>-33221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/09/26 23:58:16</td>   <td>-20240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;tearDown</td> 
+<tr bgcolor="a583f8">  <td>20/10/03 10:33:30</td>   <td>-19889</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/09/26 23:58:31</td>   <td>-5867</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;tearDown</td> 
+<tr bgcolor="a583f8">  <td>20/10/03 10:33:44</td>   <td>-5668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
 </table>
