--- a/DataDrivenFramework/test-output/old/Default suite/methods.html
+++ b/DataDrivenFramework/test-output/old/Default suite/methods.html
@@ -1,38 +1,38 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a583f8">  <td>20/10/03 10:32:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;startup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/10/03 10:32:43</td>   <td>904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="9b7070">  <td>20/10/03 10:32:45</td>   <td>3158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataBase(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@17d677df]">dataBase</td> 
-  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/10/03 10:32:52</td>   <td>10377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/10/03 10:32:58</td>   <td>16058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="9b7070">  <td>20/10/03 10:32:59</td>   <td>17048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataBase(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@17d677df]">dataBase</td> 
-  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/10/03 10:33:04</td>   <td>22025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/10/03 10:33:09</td>   <td>27151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="9b7070">  <td>20/10/03 10:33:10</td>   <td>28083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataBase(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@17d677df]">dataBase</td> 
-  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/10/03 10:33:17</td>   <td>35213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/10/03 10:33:23</td>   <td>40885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="9b7070">  <td>20/10/03 10:33:23</td>   <td>41801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataBase(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@17d677df]">dataBase</td> 
-  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/10/03 10:33:30</td>   <td>48545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/10/03 10:33:36</td>   <td>54211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@17d677df]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="9b7070">  <td>20/10/03 10:33:37</td>   <td>55115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataBase(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@17d677df]">dataBase</td> 
-  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/10/03 10:33:44</td>   <td>62766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
-<tr bgcolor="a583f8">  <td>20/10/03 10:33:50</td>   <td>68434</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterAllTests()[pri:0, instance:automationScripts.Script@17d677df]">&lt;&lt;afterAllTests</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
+<tr bgcolor="61a3d3">  <td>20/12/12 14:46:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startup()[pri:0, instance:automationScripts.Script@7a765367]">&gt;&gt;startup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="61a3d3">  <td>20/12/12 14:46:59</td>   <td>468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@7a765367]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="6a9486">  <td>20/12/12 14:47:05</td>   <td>6684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataExcel(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@7a765367]">dataExcel</td> 
+  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="61a3d3">  <td>20/12/12 14:47:16</td>   <td>17784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@7a765367]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="61a3d3">  <td>20/12/12 14:47:22</td>   <td>23479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@7a765367]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="6a9486">  <td>20/12/12 14:47:25</td>   <td>26441</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataExcel(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@7a765367]">dataExcel</td> 
+  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="61a3d3">  <td>20/12/12 14:47:33</td>   <td>35216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@7a765367]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="61a3d3">  <td>20/12/12 14:47:39</td>   <td>40855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@7a765367]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="6a9486">  <td>20/12/12 14:47:42</td>   <td>43911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataExcel(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@7a765367]">dataExcel</td> 
+  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="61a3d3">  <td>20/12/12 14:47:51</td>   <td>53138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@7a765367]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="61a3d3">  <td>20/12/12 14:47:57</td>   <td>58782</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@7a765367]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="6a9486">  <td>20/12/12 14:48:00</td>   <td>61878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataExcel(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@7a765367]">dataExcel</td> 
+  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="61a3d3">  <td>20/12/12 14:48:09</td>   <td>70442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@7a765367]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="61a3d3">  <td>20/12/12 14:48:14</td>   <td>75856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:automationScripts.Script@7a765367]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="6a9486">  <td>20/12/12 14:48:17</td>   <td>78814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Script.dataExcel(java.lang.String, java.lang.String)[pri:0, instance:automationScripts.Script@7a765367]">dataExcel</td> 
+  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="61a3d3">  <td>20/12/12 14:48:26</td>   <td>87564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown(org.testng.ITestResult)[pri:0, instance:automationScripts.Script@7a765367]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="61a3d3">  <td>20/12/12 14:48:31</td>   <td>93195</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterAllTests()[pri:0, instance:automationScripts.Script@7a765367]">&lt;&lt;afterAllTests</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
 </table>
