--- a/DataDrivenFramework/test-output/old/Default suite/methods-not-run.html
+++ b/DataDrivenFramework/test-output/old/Default suite/methods-not-run.html
@@ -1,3 +1,3 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>automationScripts.Script.dataExcel</td></tr>
+<tr><td>automationScripts.Script.dataBase</td></tr>
 </table>
